Update Status functionality
Update Status functionality

--- a/MobileTesting/test-output/html/output.html
+++ b/MobileTesting/test-output/html/output.html
@@ -16,20 +16,10 @@
 
   <div id="log">
                   Click to see Screenshot
-                        <a target="_blank" href=Sat_Feb_15_03_16_39_IST_2020.jpg>Screenshot</a>
+                        <a target="_blank" href=C:\Users\Admin\eclipse-workspace\MobileTesting\target\surefire-reports\html\Mon_Feb_24_15_08_40_IST_2020.jpg>Screenshot</a>
                         <br>
                         <br>
-                        <a target="_blank" href=Sat_Feb_15_03_16_39_IST_2020.jpg><img src=Sat_Feb_15_03_16_39_IST_2020.jpg height=200 width=200></img></a>
-                        Click to see Screenshot
-                        <a target="_blank" href=Sat_Feb_15_03_16_50_IST_2020.jpg>Screenshot</a>
-                        <br>
-                        <br>
-                        <a target="_blank" href=Sat_Feb_15_03_16_50_IST_2020.jpg><img src=Sat_Feb_15_03_16_50_IST_2020.jpg height=200 width=200></img></a>
-                        Click to see Screenshot
-                        <a target="_blank" href=Sat_Feb_15_03_17_02_IST_2020.jpg>Screenshot</a>
-                        <br>
-                        <br>
-                        <a target="_blank" href=Sat_Feb_15_03_17_02_IST_2020.jpg><img src=Sat_Feb_15_03_17_02_IST_2020.jpg height=200 width=200></img></a>
+                        <a target="_blank" href=C:\Users\Admin\eclipse-workspace\MobileTesting\target\surefire-reports\html\Mon_Feb_24_15_08_40_IST_2020.jpg><img src=C:\Users\Admin\eclipse-workspace\MobileTesting\target\surefire-reports\html\Mon_Feb_24_15_08_40_IST_2020.jpg height=200 width=200></img></a>
             </div>
 
 </body>
