--- a/MobileTesting/test-output/old/Default suite/methods.html
+++ b/MobileTesting/test-output/old/Default suite/methods.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fd69dd">  <td>20/02/15 01:22:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SendMessage.sendMessageToFirstContact(java.lang.String)[pri:0, instance:Tests.SendMessage@73844119]">sendMessageToFirstContact</td> 
-  <td>main@1131140319</td>   <td></td> </tr>
+<tr bgcolor="7e8ebe">  <td>20/02/24 20:40:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UploadStatus.updateStatus(java.lang.String)[pri:0, instance:Tests.UploadStatus@2abafa97]">updateStatus</td> 
+  <td>main@93560356</td>   <td></td> </tr>
+<tr bgcolor="ad9d8a">  <td>20/02/24 20:41:11</td>   <td>36792</td> <td title="&lt;&lt;WhatsAppBase.TearDown()[pri:0, instance:Tests.UploadStatus@2abafa97]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@93560356</td>   <td></td> </tr>
 </table>
