--- a/MobileTesting/test-output/old/Suite/methods.html
+++ b/MobileTesting/test-output/old/Suite/methods.html
@@ -1,16 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="eea77c">  <td>20/02/15 03:15:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SendMessage.openApplication(java.lang.String)[pri:0, instance:Tests.SendMessage@7dd3981e]">openApplication</td> 
-  <td>main@2027340356</td>   <td></td> </tr>
-<tr bgcolor="eea77c">  <td>20/02/15 03:15:44</td>   <td>11626</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SendMessage.sendMessageToFirstContact(java.lang.String)[pri:0, instance:Tests.SendMessage@7dd3981e]">sendMessageToFirstContact</td> 
-  <td>main@2027340356</td>   <td></td> </tr>
-<tr bgcolor="82e6a5">  <td>20/02/15 03:16:03</td>   <td>31064</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateGroupChat.first_openNewGroupPage(java.lang.String)[pri:0, instance:Tests.CreateGroupChat@59313495]">first_openNewGroupPage</td> 
-  <td>main@2027340356</td>   <td></td> </tr>
-<tr bgcolor="82e6a5">  <td>20/02/15 03:16:39</td>   <td>66571</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateGroupChat.second_createGroupAndSendMessage(java.lang.String)[pri:0, instance:Tests.CreateGroupChat@59313495]">second_createGroupAndSendMessage</td> 
-  <td>main@2027340356</td>   <td></td> </tr>
-<tr bgcolor="82e6a5">  <td>20/02/15 03:16:50</td>   <td>78162</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateGroupChat.second_createGroupAndSendMessage(java.lang.String)[pri:0, instance:Tests.CreateGroupChat@59313495]">second_createGroupAndSendMessage</td> 
-  <td>main@2027340356</td>   <td></td> </tr>
-<tr bgcolor="ca8fc3">  <td>20/02/15 03:17:02</td>   <td>89815</td> <td title="&lt;&lt;WhatsAppBase.TearDown()[pri:0, instance:Tests.SendMessage@7dd3981e]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2027340356</td>   <td></td> </tr>
+<tr bgcolor="de7f9d">  <td>20/02/24 15:09:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UploadStatus.updateStatus(java.lang.String)[pri:0, instance:Tests.UploadStatus@7198ab9a]">updateStatus</td> 
+  <td>main@1744146882</td>   <td></td> </tr>
+<tr bgcolor="6ae6a7">  <td>20/02/24 15:09:37</td>   <td>20725</td> <td title="&lt;&lt;WhatsAppBase.TearDown()[pri:0, instance:Tests.UploadStatus@7198ab9a]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1744146882</td>   <td></td> </tr>
 </table>
